--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <script type="module" src="JS/main.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Space Invadors</title>
+    <title>Space Invaders</title>
 </head>
 
 <body>
